--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="icon" href="assets/logo.png" />  
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="MTPS - Manufacture de Tubes Plastiques et Services"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
+<link rel="icon" href="assets/logo.png" />
     <!-- Polices Roboto pour Material-UI -->
     <link
       rel="stylesheet"
